/*
	Structure of Storage area of TREZOR

	Author: Marek Palatinus <slush@satoshilabs.com>

	Version: 0.1
*/

import "trezor.proto";

message Storage {
	required uint32 version = 1;
	optional HDNodeType seed = 2;
	optional bool seed_encrypted = 3;
	optional uint32 pin_failed_attempts = 4;
	optional bytes pin = 5;
	optional SettingsType settings = 6;
}
